// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spartacus CDC schematics: ng-add CDC feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { CdcModule } from \\"@commerce-storefront-toolset/cdc\\";
import { CdcConfig, CdcRootModule } from \\"@commerce-storefront-toolset/cdc/root\\";
import { provideConfig } from \\"@commerce-storefront-toolset/core\\";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule,
    CdcModule
  ],
  providers: [provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: 'JS_SDK_URL_PLACEHOLDER',
        sessionExpiration: 3600
      },
    ],
  })]
})
export class CdcFeatureModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CdcConfig, CdcRootModule, CDC_FEATURE } from \\"@commerce-storefront-toolset/cdc/root\\";
import { CmsConfig, provideConfig } from \\"@commerce-storefront-toolset/core\\";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CDC_FEATURE]: {
        module: () =>
          import('@commerce-storefront-toolset/cdc').then((m) => m.CdcModule),
      },
    }
  }),
  provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: 'JS_SDK_URL_PLACEHOLDER',
        sessionExpiration: 3600
      },
    ],
  })
  ]
})
export class CdcFeatureModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature validation of jsSDKUrl should set the given javascriptUrl 1`] = `
"import { NgModule } from '@angular/core';
import { CdcConfig, CdcRootModule, CDC_FEATURE } from \\"@commerce-storefront-toolset/cdc/root\\";
import { CmsConfig, provideConfig } from \\"@commerce-storefront-toolset/core\\";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CDC_FEATURE]: {
        module: () =>
          import('@commerce-storefront-toolset/cdc').then((m) => m.CdcModule),
      },
    }
  }),
  provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: '<dc>.gigya.com/<api-key>',
        sessionExpiration: 3600
      },
    ],
  })
  ]
})
export class CdcFeatureModule { }
"
`;
